# categoriseNotes

./: prompt.md  pyproject.toml  requirements.txt
src/: categoriseNotes.py  categorize_notes.py  groupNotes.py  helperPrompts.py  main.py  prompts.json  prompts.py  test.py
