[project]
name = "categoriseNotes"
version = "0.1.0"
description = ""
authors = [
    {name = "Dist Bit", email = "adp01@pm.me"},
]
dependencies = [
    "python-dotenv>=1.0.1,<2.0.0",
    "loguru>=0.7.2,<0.8.0",
    "PySnooper>=1.2.0,<2.0.0",
    "anthropic>=0.34.2",
    "pyperclip>=1.9.0",
    "openai>=1.50.2",
]
requires-python = ">=3.12"
license = {text = "UNLICENCE"}
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
